# Script-Killer-Service-Scanning

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  nix.go  opencode.json  test.xml  toolmap.go
src/: main.go
src/detector/: language.go
src/mcp/: config.go  mcp.go  server.go
src/nix/: nix.go
src/tools/: bandit.go  cppcheck.go  dedup.go  eslint.go  gitleaks.go  gosec.go  gosec_test.go  grype.go  nikto.go  osv_scanner.go  tool_interface.go
src/tui/: tui.go
src/tui/commands/: handlers.go
src/tui/components/commandbar/: commandbar.go
src/tui/components/details/: details.go
src/tui/components/dirlist/: dirlist.go
src/tui/components/endpointlist/: endpointlist.go
src/tui/components/findings/: findings.go
src/tui/components/header/: header.go
src/tui/components/statusbar/: statusbar.go
src/tui/orchestrator/: orchestrator.go
src/tui/scanner/: scanner.go
src/tui/styles/: theme.go
src/tui/watcher/: watcher.go
test/R_vuln/: test.r
test/cpp_basic/: main.cpp
test/cpp_vuln/: CMakeLists.txt  main.cpp
test/go_basic1/: go.mod  main.go
test/go_io1/: go.mod  go_io1  main.go
test/go_vuln/: go.mod
test/java_vuln/: pom.xml
test/js_vuln/: index.js
test/node_vuln/: index.js  package.json
test/php_vuln/: composer.json  index.php
test/python_basic/: main.py
test/python_sql_injection_vuln/: setup_db.py  test.db  vulnerable_auth.py
test/python_vuln/: app.py  requirements.txt
test/ruby_vuln/: Gemfile  app.rb
test/rust_vuln/: Cargo.toml
test/rust_vuln/src/: main.rs
test/secrets_test/: secrets.py
(+1 files in other folders)
